--- a/.nycrc
+++ b/.nycrc
@@ -8,12 +8,12 @@
     "src/**/*.tsx"
   ],
   "exclude": [
+    "src/**/*.d.ts",
     "src/**/*.spec.ts",
     "src/**/*.spec.tsx"
   ],
   "extension": [
     ".ts",
     ".tsx"
-  ],
-  "produce-source-map": true
+  ]
 }
